apps/staging/crassus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crassus-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - crassus.staging.saltechng.com
      secretName: crassus-tls
  rules:
    - host: crassus.staging.saltechng.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crassus-n8n
                port:
                  number: 3008
